[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncio>=3.4.3",
    "modules>=1.0.0",
    "python-dotenv>=1.1.0",
    "python-telegram-bot[job-queue]>=22.0",
    "telegram>=0.0.1",
]
